Adding deployment information for Maven.